Compiling on macOS + JDK19